# pydress

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
data/cross-sections/: Be9(alpha,n)C12-cross-section_jsi.txt  Be9(p,alpha)Li6-cross-section_jsi.txt  Be9(p,n)B9-cross-section_jsi.txt
doc/: Spectrum_calculations.ipynb  spectrum_calculations.ipynb
doc/Tokamak-example/: plasma.npz  tokamak-spectrum.ipynb
dress/: #volspec.py#  .#volspec.py  __init__.py  __init__.py~  config.py  dists.py  plotutils.py  relkin.py  relscatt.py  relscatt.py~  sampler.py  spec.py  spec.py~  specplot.py  tokapart.py  utils.py  vcone.py  vec_ops.py  volspec.py
dress/reactions/: __init__.py  __init__.py~  alpha_be9_n_c12_reaction.py  alpha_be9_n_c12_reaction.py~  alpha_be9_n_c12e1_reaction.py  alpha_be9_n_c12e1_reaction.py~  alpha_scat.py  alpha_scat.py~  config.py  config.py~  d_be9_n_B10_reaction.py  d_be9_n_b10_reaction.py  d_d_n_he3_reaction.py  d_d_n_he3_reaction.py~  d_he3_p_he4_reaction.py  d_he3_p_he4_reaction.py~  d_t_n_he4_reaction.py  d_t_n_he4_reaction.py~  masses.py  masses.py~  p_be9_alpha_li6_reaction.py  p_be9_d_be8_reaction.py  p_be9_n_b9_reaction.py  p_be9_n_b9_reaction.py~  p_be9_n_b9e1_reaction.py~  p_t_n_he3_reaction.py  p_t_n_he3_reaction.py~  particle.py  particle.py~  reaction.py  reaction.py~  t_t_2n_he4_reaction.py  t_t_2n_he4_reaction.py~
dress/tokamak/: __init__.py  tokadist.py  utils.py
src/dress/: __init__.py  config.py  plotutils.py  relkin.py  spec.py  utils.py  vec_ops.py  volspec.py
src/dress/reactions/: alpha_scat.py  masses.py  (+7 more)
(+20 files in other folders)
